--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "小学班级成绩统计展示网页，卡通勇士打BOSS风格，支持移动端自适应。",
   "main": "src/index.js",
   "scripts": {
-    "start": "react-scripts start",
+    "heroku-postbuild": "react-scripts build",
+    "start": "node server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
